[gd_scene load_steps=5 format=3 uid="uid://bv0dp723v8xnc"]

[ext_resource type="Script" path="res://snow_cruise_shoot.gd" id="1_f3k32"]
[ext_resource type="Texture2D" uid="uid://be6ei5labu2os" path="res://images/enemies/snow_cruise/istockphoto-1673250199-1024x1024-removebg-preview.png" id="2_rbw4o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f73j0"]
radius = 120.0

[sub_resource type="SpriteFrames" id="SpriteFrames_6jqoa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_rbw4o")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[node name="SnowCruiseShoot" type="Area2D"]
script = ExtResource("1_f3k32")

[node name="ActionArea" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0.5)
shape = SubResource("CircleShape2D_f73j0")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.38419e-07, -0.5)
scale = Vector2(0.117647, 0.111111)
sprite_frames = SubResource("SpriteFrames_6jqoa")
animation = &"shoot"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
